# river-tracker-bot

./: .dockerignore  .env.template  .env_example  .env_prod  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  config.py  config_prod.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 0fdf95dec0ac_create_subs_town_subs_town_tables.py
bot/: .env  __init__.py  bot.py  create_bot.py  keyboards.py  run.py  ui_commands.py
bot/core/: bot_commands.py  lexicon.py  ui_commands.py
bot/core/states/: __init__.py  remove_subscription.py  subscription.py
bot/db/: __init__.py  base.py  csv_filler.py  db_manager.py  make_models.py  models.py  requests.py  subscription.py  subscriptions_towns_association.py  town.py
bot/db/crud/: requests.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 1655102345fa_new_column.py  4ab04fc64b98_fix.py  5c8e03828fc4_initial_chekc.py  ae29fd0d46e0_test.py  ec53fbf9f9e6_init.py
bot/db/models/: subscription.py  subscriptions_towns_association.py  town.py
bot/handlers/: donate.py  get_data.py  main_router.py  start.py  subscribe.py  subscription.py  unsubscribe.py
bot/utils/: __init__.py  csv_filler.py  notifications.py  states.py  towns_data.csv
emercit_parse/: async_emercit_data.py  async_emercit_parser.py  emercit_data.py  emercit_parser.py  util.py
emersit_parse/: main.py
parser/: __init__.py  parser.py
