[tool.poetry]
name = "emersit-parse"
version = "0.1.0"
description = ""
authors = ["Kamil Ayupov <ayupovkamil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "^3.3.0"
python-dotenv = "^1.0.1"
fake-useragent = "^1.4.0"
sqlalchemy = "^2.0.27"
greenlet = "^3.0.3"
asyncpg = "^0.29.0"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
